--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .pio
+esp32_i2s/.vscode/*
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
 
-*vscode/*
+server/.vscode/*
 server/uploads/*
 server/__pycache__/*
